using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MyTags : MonoBehaviour
{

    public static string WALK_ANIMATION = "Walk";
    public static string RUN_ANIMATION = "Run";

    public static string WALK_TRIGGER = "Walk";
    public static string RUN_TRIGGER = "Run";
    public static string STOP_TRIGGER = "Stop";

}
